--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ nav{
 	cursor: pointer;
 }
 span{
-	color: #f9004d;
+	color: #9932CC;
 }
 nav ul li{
 	list-style-type: none;
@@ -40,11 +40,11 @@ nav ul li a{
 	text-transform: capitalize;
 }
 nav ul li a:hover{
-	color: #f9004d;
+	color: #9932CC;
 	transition: .4s;
 }
 .btn{
-	background-color:#f9004d;
+	background-color:#9932CC;
 	color: white;
 	text-decoration: none;
 	border: 2px solid transparent;
@@ -86,7 +86,7 @@ h4{
 	display: inline-block;
 	width: 100%;
 	padding: 14px 130px 14px 15px;
-	border: 2px solid #f9004d;
+	border: 2px solid #9932CC;
 	outline: none;
 	border-radius: 30px;
 }
@@ -97,13 +97,12 @@ h4{
 	border: none;
 	padding: 10px 30px;
 	border-radius: 30px;
-	background-color:#f9004d;
+	background-color:#9932CC;
 	color: white;
 	box-shadow: 0px 0px 5px #000, 0px 0px 15px #858585;
 	top: 6px;
 	right: 6px; 
 }
-
 .about{
 	width: 100%;
 	padding: 100px 0px;
@@ -145,7 +144,7 @@ h4{
 	margin-bottom: 45px;
 }
 button{
-	background-color:#f9004d;
+	background-color:#9932CC;
 	color: white;
 	text-decoration: none;
 	border: 2px solid transparent;
@@ -156,10 +155,9 @@ button{
 }
 button:hover{
 	background-color: transparent;
-	border: 2px solid #f9004d;
+	border: 2px solid #9932CC;
 	cursor: pointer;
 }
-
 .service{
 	background: #101010;
 	width: 100%;
@@ -194,7 +192,7 @@ button:hover{
 	display: block;
 	text-align: center;
 	margin: 25px 0px;
-	color: #f9004d;
+	color: #9932CC;
 
 }
 h5{
@@ -209,7 +207,7 @@ h5{
 	margin-bottom: 25px;
 }
 .card .button{
-	background-color:#f9004d;
+	background-color:#9932CC;
 	color: white;
 	text-decoration: none;
 	border: 2px solid transparent;
@@ -220,7 +218,7 @@ h5{
 }
 .card .button:hover{
 	background-color: transparent;
-	border: 2px solid #f9004d;
+	border: 2px solid #9932CC;
 	cursor: pointer;
 }
 .contact-me{
@@ -239,7 +237,7 @@ h5{
 	margin-bottom: 25px;
 }
 .contact-me .button-two{
-	background-color:#f9004d;
+	background-color:#9932CC;
 	color: white;
 	text-decoration: none;
 	border: 2px solid transparent;
@@ -250,10 +248,9 @@ h5{
 }
 .contact-me .button-two:hover{
 	background-color: transparent;
-	border: 2px solid #f9004d;
+	border: 2px solid #9932CC;
 	cursor: pointer;
 }
-
 footer{
 	position: relative;
 	width: 100%;
@@ -286,7 +283,7 @@ footer p:nth-child(2){
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	background:  #f9004d;
+	background:  #9932CC;
 	border-radius: 50%;
 	margin: 22px 10px;
 	color: white;
@@ -299,7 +296,13 @@ footer p:nth-child(2){
 }
 .end{
 	position: absolute;
-	color:#f9004d;
+	color:#9932CC;
 	bottom: 35px;
 	font-size: 14px; 
+}
+.shero{
+	margin-bottom: 25px;
+}
+.dreamy{
+	margin-top: 25px;
 }
